@@ -1,5 +1,7 @@
 CHANGES IN FLTK 1.1.8
 
+	- Better event mouse handling fixing detached menus and
+	  sticky tooltips (STR #1463, STR #449)
 	- Documentation fixes (STR #1454, STR #1455, STR #1456,
 	  STR #1457, STR #1458, STR #1460, STR #1481)
 	- Added Fl::scrollbar_size() methods that are used by all
